--- a/blog-list.html
+++ b/blog-list.html
@@ -79,7 +79,7 @@
 					    <div class="media-body">
 						    <h3 class="title mb-1"><a href="blog-post.html">Introductory Blog</a></h3>
 						    <div class="meta mb-1"><span class="date">Published on 7 June 2021</span><span class="time">5 min read</span></div>
-						    <div class="intro">This is the first blog of the dedicated GSoC blog series. This will be used for documenting and exhibiting the work done during GSoC by me. A short and crisp read. ... </div>
+						    <div class="intro">This is the first blog of the dedicated GSoC blog series. This will be used for documenting and exhibiting the work done during GSoC by me. A short and crisp read ... </div>
 						    <a class="more-link" href="blog-post.html">Read more &rarr;</a>
 					    </div><!--//media-body-->
 				    </div><!--//media-->
@@ -106,11 +106,11 @@
 		    <div class="container">
 			    <div class="item mb-5">
 				    <div class="media">
-					    <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/GSoC-ML4SCI.png" alt="image">
+					    <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/Post1-icon.png" alt="image">
 					    <div class="media-body">
 						    <h3 class="title mb-1"><a href="blog-post-1.html">Preliminaries</a></h3>
-						    <div class="meta mb-1"><span class="date">Published on 21 June 2021</span><span class="time">5 min read</span></div>
-						    <div class="intro">The Coding Phase began after the 3-week long Community Bonding period. ... </div>
+						    <div class="meta mb-1"><span class="date">Published on 24 June 2021</span><span class="time">5 min read</span></div>
+						    <div class="intro">The Coding Phase began after the 3-week long Community Bonding period ... </div>
 						    <a class="more-link" href="blog-post.html">Read more &rarr;</a>
 					    </div><!--//media-body-->
 				    </div><!--//media-->
@@ -129,20 +129,20 @@
 		    <div class="container">
 			    <div class="item mb-5">
 				    <div class="media">
-					    <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/GSoC-ML4SCI.png" alt="image">
+					    <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/Post2-icon.png" alt="image">
 					    <div class="media-body">
 						    <h3 class="title mb-1"><a href="blog-post-2.html">Working with Real Data!</a></h3>
 						    <div class="meta mb-1"><span class="date">Published on 9 July 2021</span><span class="time">5 min read</span></div>
-						    <div class="intro">Having completed the elementary work on the dummy data in the previous few weeks, I was now ready for the working on the actual data ! ... </div>
+						    <div class="intro">Having completed the elementary work on the dummy data in the previous few weeks, I was now ready for the working on the actual data! ... </div>
 						    <a class="more-link" href="blog-post.html">Read more &rarr;</a>
 					    </div><!--//media-body-->
 				    </div><!--//media-->
 			    </div><!--//item-->
 			    
-			    <nav class="blog-nav nav nav-justified my-5">
+			    <!-- <nav class="blog-nav nav nav-justified my-5">
 				  <a class="nav-link-prev nav-item nav-link rounded-left" href="#">Previous<i class="arrow-prev fas fa-long-arrow-alt-left"></i></a>
 				  <a class="nav-link-next nav-item nav-link rounded-right" href="#">Next<i class="arrow-next fas fa-long-arrow-alt-right"></i></a>
-				</nav>
+				</nav> -->
 				
 		    </div>
 	    </section>
