--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 					    <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/GSoC-ML4SCI.png" alt="image">
 					    <div class="media-body">
 						    <h3 class="title mb-1"><a href="blog-post.html">Introductory Blog</a></h3>
-						    <div class="meta mb-1"><span class="date">Published on 6 June 2021</span><span class="time">5 min read</span></div>
+						    <div class="meta mb-1"><span class="date">Published on 7 June 2021</span><span class="time">5 min read</span></div>
 						    <div class="intro">Welcome, everyone! 
-								This is the first blog of the dedicated GSoC blog series. This will be used for documenting and exhibiting the work done during GSoC by me. A short and crisp read</div>
+								This is the first blog of the dedicated GSoC blog series. This will be used for documenting and exhibiting the work done during GSoC by me. A short and crisp read ...</div>
 						    <a class="more-link" href="blog-post.html">Read more &rarr;</a>
 					    </div><!--//media-body-->
 				    </div><!--//media-->
@@ -120,9 +120,9 @@
 					    <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/Post1-icon.png" alt="image">
 					    <div class="media-body">
 						    <h3 class="title mb-1"><a href="blog-post-1.html">Preliminaries</a></h3>
-						    <div class="meta mb-1"><span class="date">Published on 24 June 2021</span><span class="time">10 min read</span></div>
+						    <div class="meta mb-1"><span class="date">Published on 24 June 2021</span><span class="time">5 min read</span></div>
 						    <div class="intro">Welcome, everyone! 
-								The Coding Phase began after the 3-week long Community Bonding period. </div>
+								The Coding Phase began after the 3-week long Community Bonding period ... </div>
 						    <a class="more-link" href="blog-post-1.html">Read more &rarr;</a>
 					    </div><!--//media-body-->
 				    </div><!--//media-->
@@ -145,9 +145,9 @@
 					    <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/Post2-icon.png" alt="image">
 					    <div class="media-body">
 						    <h3 class="title mb-1"><a href="blog-post-2.html">Working with Real Data !</a></h3>
-						    <div class="meta mb-1"><span class="date">Published on 9 July 2021</span><span class="time">10 min read</span></div>
+						    <div class="meta mb-1"><span class="date">Published on 9 July 2021</span><span class="time">5 min read</span></div>
 						    <div class="intro">Welcome, everyone! 
-								Having completed the elementary work on the dummy data in the previous few weeks, I was now ready for the working on the actual data !</div>
+								Having completed the elementary work on the dummy data in the previous few weeks, I was now ready for the working on the actual data! ...</div>
 						    <a class="more-link" href="blog-post-2.html">Read more &rarr;</a>
 					    </div><!--//media-body-->
 				    </div><!--//media-->
