--- a/blog-list.html
+++ b/blog-list.html
@@ -59,7 +59,9 @@
 					<li class="nav-item">
 						<a class="nav-link" href="blog-post-2.html"><i class="fas fa-bookmark fa-fw mr-2"></i>Working with Real Data!</a>
 					<li class="nav-item">
-						<a class="nav-link" href="blog-post-3.html"><i class="fas fa-bookmark fa-fw mr-2"></i>Eigenvalue Computations and Analysis</a>
+						<a class="nav-link" href="blog-post-3.html"><i class="fas fa-bookmark fa-fw mr-2"></i>Eigenvalue Computations</a>
+					<li class="nav-item">
+						<a class="nav-link" href="blog-post-4.html"><i class="fas fa-bookmark fa-fw mr-2"></i>Further Improvements</a>
 					<li class="nav-item">
 						<a class="nav-link" href="project.html"><i class="fa fa-tasks fa-fw mr-2"></i>Project</a>
 					<li class="nav-item">
@@ -108,7 +110,7 @@
 		    <div class="container">
 			    <div class="item mb-5">
 				    <div class="media">
-					    <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/Post1-icon.png" alt="image">
+					    <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/Post1-icon.jpg" alt="image">
 					    <div class="media-body">
 						    <h3 class="title mb-1"><a href="blog-post-1.html">Preliminaries</a></h3>
 						    <div class="meta mb-1"><span class="date">Published on 24 June 2021</span><span class="time">5 min read</span></div>
@@ -153,13 +155,38 @@
 		    <div class="container">
 			    <div class="item mb-5">
 				    <div class="media">
-					    <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/Post2-icon.png" alt="image">
+					    <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/Post3-icon.jpeg" alt="image">
 					    <div class="media-body">
 						    <h3 class="title mb-1"><a href="blog-post-3.html">Eigenvalue Computations and Analysis</a></h3>
 						    <div class="meta mb-1"><span class="date">Published on 20 July 2021</span><span class="time">5 min read</span></div>
-						    <div class="intro">Welcome, everyone! 
+						    <div class="intro">
 								Some results obtained now, the plots are for the transitional states ...</div>
 						    <a class="more-link" href="blog-post-3.html">Read more &rarr;</a>
+					    </div><!--//media-body-->
+				    </div><!--//media-->
+			    </div><!--//item-->
+			    
+				<!--
+                  <nav class="blog-nav nav nav-justified my-5">
+				  <a class="nav-link-prev nav-item nav-link d-none rounded-left" href="#">Previous<i class="arrow-prev fas fa-long-arrow-alt-left"></i></a>
+				  <a class="nav-link-next nav-item nav-link rounded" href="#">Next<i class="arrow-next fas fa-long-arrow-alt-right"></i></a>
+				 </nav>
+				-->
+			  
+		    </div>
+	    </section>
+
+		<section class="blog-list px-3 py-5 p-md-5">
+		    <div class="container">
+			    <div class="item mb-5">
+				    <div class="media">
+					    <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/Post4-icon.png" alt="image">
+					    <div class="media-body">
+						    <h3 class="title mb-1"><a href="blog-post-3.html">Further Improvements</a></h3>
+						    <div class="meta mb-1"><span class="date">Published on 5 August 2021</span><span class="time">5 min read</span></div>
+						    <div class="intro">
+								Expanded the work done previously further by plotting the eigenvalues after applying ...</div>
+						    <a class="more-link" href="blog-post-4.html">Read more &rarr;</a>
 					    </div><!--//media-body-->
 				    </div><!--//media-->
 			    </div><!--//item-->
